--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*==================== GOOGLE FONTS ====================*/
-@import url('http://fonts.cdnfonts.com/css/product-sans');
+@import url('https://fonts.cdnfonts.com/css/product-sans');
 
 /*==================== VARIABLES CSS ====================*/
 :root {
