--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -393,6 +393,7 @@ img{
 .about__buttons{
     display: flex;
     justify-content: center;
+    margin-top: 30px;
 }
 .about-section{
     margin-bottom: 30px;
